# fabric-metadata-dags

./: .gitignore  README.md  main.py  pyproject.toml
metadata/: marketing_pipeline.yaml  my_pipeline.yaml  sales_pipeline.yaml
src/fabric_metadata_dags/: __init__.py  builder.py  cli.py  config.py  fabric_client.py  generator.py  linter.py  loader.py  pipeline.py  scaffold.py  schema.py  validator.py
tests/: __init__.py  test_builder.py  test_config.py  test_fabric_client.py  test_generator.py  test_init.py  test_linter.py  test_loader.py  test_pipeline.py  test_scaffold.py  test_schema_validation.py  test_validator.py
